# cups-pk-helper

./: README  meson.build
po/: LINGUAS  ca.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  eu.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: Makefile.am  cups.c  main.c  meson.build  org.opensuse.CupsPkHelper.Mechanism.service.in  org.opensuse.cupspkhelper.mechanism.policy.in  test-cups-pk.c  test-cups.c
